--- a/index.html
+++ b/index.html
@@ -1,23 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
     <title>Mempelajari cara belajar</title>
 </head>
 
-<body>
+<body style="margin: 0px">
     <div class="page">
-        <header class="header"></header>
+        <header class="header">
+            <img class="logo_place-header" src="./images/logo_place_header.png">
+            <div class="container">
+                <h1 class="header_title">Mampelajari cara belajar</h1>
+                <h2 class="header_subtitle">Cara belajar yang canggih dan paling efektif yang dapat diterapkan dalam kehidupan sehari-hari</h2>
+                <a class="header_link" href="#"> Pelajari selengkapnya </a>
+                <img class="header_main-illustrator" alt="Pemikir handal berdiri di puncak gunung membahas poin-poin penting dari sistem pendidikan modern, sambil juga
+                bertanya-tanya dari mana kotak biru raksasa itu berasal." src="./images/header-image.png">
+                <div class="header_square"></div>
+            </div>
+        </header>
         <main class="content">
-            <section class="description"></section>
+            <section class="description">
+                <div class="two-columns">Masalah utama pendidikan</div>
+                <div class="two-columns__brief">
+                </div>
+                <div class="two-columns__main-text">
+                    <p class="two-columns__paragraph"> di sekolah maupun universitas, satu hal yang tidak pernah diajarkan kepada Anda adalah cara mengajar diri sendiri. Umumnya, kita hanya menghafal materi tertentu dan melatih diri untuk mengikuti tes sehingga dapat lulus pada tes tersebut pada waktunya. Namun, setelah ujian dan tes selesai, informasi yang Anda hafalkan tersebut seakan tidak lagi berguna, dan karenanya, tidak ada jaminan bahwa Anda akan tetap ingat hal-hal yang telah dipelajari di sekolah. Pada akhirnya, kita hanya belajar bagaimana cara untuk lulus ujian.
+                    </p>
+                    <p class="two-columns__paragraph"> apakah dengan menghafal dan mengulang materi pelajaran, kita benar-benar dapat memahami inti materi yang kita pelajari? Menurut konsensus akademis terkini, jawabannya adalah tidak. Sebenarnya, alih-alih mempelajari suatu mata pelajaran, hal yang paling penting untuk dikuasai adalah cara belajar, namun sayangnya hal ini sering terabaikan. Jadi, apa yang bisa kita lakukan untuk memperbaiki hal ini?
+                    </p>
+                    <p class="two-columns__paragraph">Ada beberapa teknik dan latihan yang dapat Anda terapkan dalam proses pembelajaran agar prosesnya menjadi lebih efisien dan menarik. Terus gulir halaman ini untuk menemukan berbagai rahasia untuk belajar efektif.
+                    </p>
+                </div>
+            </section> 
 
-            <section class="digits"></section>
+            <section class="page digits"></section>
 
-            <section class="feynman"></section>
+            <section class="page feynman"></section>
 
-            <section class="kaufman"></section>
+            <section class="page kaufman"></section>
         </main>
         <footer class="footer"></footer>
     </div>
