--- a/index.html
+++ b/index.html
@@ -28,20 +28,58 @@
                 <div class="two-columns__brief">
                 </div>
                 <div class="two-columns__main-text">
-                    <p class="two-columns__paragraph"> di sekolah maupun universitas, satu hal yang tidak pernah diajarkan kepada Anda adalah cara mengajar diri sendiri. Umumnya, kita hanya menghafal materi tertentu dan melatih diri untuk mengikuti tes sehingga dapat lulus pada tes tersebut pada waktunya. Namun, setelah ujian dan tes selesai, informasi yang Anda hafalkan tersebut seakan tidak lagi berguna, dan karenanya, tidak ada jaminan bahwa Anda akan tetap ingat hal-hal yang telah dipelajari di sekolah. Pada akhirnya, kita hanya belajar bagaimana cara untuk lulus ujian.
+                    <p class="two-columns__paragraph"> Baik di sekolah maupun universitas, satu hal yang tidak pernah diajarkan kepada Anda adalah cara mengajar diri sendiri. Umumnya, kita hanya menghafal materi tertentu dan melatih diri untuk mengikuti tes sehingga dapat lulus pada tes tersebut pada waktunya. Namun, setelah ujian dan tes selesai, informasi yang Anda hafalkan tersebut seakan tidak lagi berguna, dan karenanya, tidak ada jaminan bahwa Anda akan tetap ingat hal-hal yang telah dipelajari di sekolah. Pada akhirnya, kita hanya belajar bagaimana cara untuk lulus ujian.
                     </p>
-                    <p class="two-columns__paragraph"> apakah dengan menghafal dan mengulang materi pelajaran, kita benar-benar dapat memahami inti materi yang kita pelajari? Menurut konsensus akademis terkini, jawabannya adalah tidak. Sebenarnya, alih-alih mempelajari suatu mata pelajaran, hal yang paling penting untuk dikuasai adalah cara belajar, namun sayangnya hal ini sering terabaikan. Jadi, apa yang bisa kita lakukan untuk memperbaiki hal ini?
+                    <p class="two-columns__paragraph"> <span class="two-columns__span-accent"> Ini adalah pertanyaan sesungguhnya: </span>apakah dengan menghafal dan mengulang materi pelajaran, kita benar-benar dapat memahami inti materi yang kita pelajari? Menurut konsensus akademis terkini, jawabannya adalah tidak. Sebenarnya, alih-alih mempelajari suatu mata pelajaran, hal yang paling penting untuk dikuasai adalah cara belajar, namun sayangnya hal ini sering terabaikan. Jadi, apa yang bisa kita lakukan untuk memperbaiki hal ini?
                     </p>
                     <p class="two-columns__paragraph">Ada beberapa teknik dan latihan yang dapat Anda terapkan dalam proses pembelajaran agar prosesnya menjadi lebih efisien dan menarik. Terus gulir halaman ini untuk menemukan berbagai rahasia untuk belajar efektif.
                     </p>
                 </div>
             </section> 
+            <section class="digits">
+                <h2 class="section-title">Fakta dan angka</h2>
+                <h3 class="section-subtitle">Tentang belajar dan otak</h3>
+                <div class="table">
+                    <div class="table__cell">
+                        <p class="table__heading">86 miliar</p>
+                        <p class="table__text">Jumlah neuron di otak manusia</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">73%</p>
+                        <p class="table__text">Persentase orang dewasa di AS yang menganggap diri mereka sebagai pembelajar seumur hidup Pew Research Center</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">1.000 terabita</p>
+                        <p class="table__text">Kapasitas penyimpanan informasi manusia</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">500 triliun</p>
+                        <p class="table__text">Jumlah sinapsis saraf yang bertanggung jawab untuk belajar pada manusia dewasa rata-rata</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">420 juta</p>
+                        <p class="table__text">Jumlah orang dewasa di bawah 25 tahun dengan pendidikan yang kurang memadai untuk mencari pekerjaan Bank Dunia, 2017</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">26 tahun</p>
+                        <p class="table__text">Usia Albert Einstein saat ia menerbitkan makalah inovatifnya mengenai relativitas khusus</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">1885</p>
+                        <p class="table__text">Pengembangan teori forgetting curve</p>
+                    </div>
+                    <div class="table__cell">
+                        <p class="table__heading">1897</p>
+                        <p class="table__text">Publikasi penelitian Ivan Pavlov tentang pengkondisian klasik</p>
+                    </div>
 
-            <section class="page digits"></section>
+                </div>
 
-            <section class="page feynman"></section>
+            </section>
 
-            <section class="page kaufman"></section>
+            <section class="feynman"></section>
+
+            <section class="kaufman"></section>
         </main>
         <footer class="footer"></footer>
     </div>
