--- a/index.html
+++ b/index.html
@@ -37,49 +37,91 @@
                 </div>
             </section> 
             <section class="digits">
-                <h2 class="section-title">Fakta dan angka</h2>
-                <h3 class="section-subtitle">Tentang belajar dan otak</h3>
+                <h2 class="digits-title">Fakta dan angka</h2>
+                <h3 class="digits-subtitle">Tentang belajar dan otak</h3>
                 <div class="table">
                     <div class="table__cell">
-                        <p class="table__heading">86 miliar</p>
+                        <h4 class="table__heading">86 miliar</h4>
                         <p class="table__text">Jumlah neuron di otak manusia</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">73%</p>
+                        <h4 class="table__heading">73%</h4>
                         <p class="table__text">Persentase orang dewasa di AS yang menganggap diri mereka sebagai pembelajar seumur hidup Pew Research Center</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">1.000 terabita</p>
+                        <h4 class="table__heading">1.000 terabita</h4>
                         <p class="table__text">Kapasitas penyimpanan informasi manusia</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">500 triliun</p>
+                        <h4 class="table__heading">500 triliun</h4>
                         <p class="table__text">Jumlah sinapsis saraf yang bertanggung jawab untuk belajar pada manusia dewasa rata-rata</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">420 juta</p>
+                        <h4 class="table__heading">420 juta</h4>
                         <p class="table__text">Jumlah orang dewasa di bawah 25 tahun dengan pendidikan yang kurang memadai untuk mencari pekerjaan Bank Dunia, 2017</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">26 tahun</p>
+                        <h4 class="table__heading">26 tahun</h4>
                         <p class="table__text">Usia Albert Einstein saat ia menerbitkan makalah inovatifnya mengenai relativitas khusus</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">1885</p>
+                        <h4 class="table__heading">1885</h4>
                         <p class="table__text">Pengembangan teori forgetting curve</p>
                     </div>
                     <div class="table__cell">
-                        <p class="table__heading">1897</p>
+                        <h4 class="table__heading">1897</h4>
                         <p class="table__text">Publikasi penelitian Ivan Pavlov tentang pengkondisian klasik</p>
                     </div>
-
                 </div>
-
             </section>
 
-            <section class="feynman"></section>
-
-            <section class="kaufman"></section>
+            <section class="feynman">
+                <h2 class="feynman__title">Teknik Feynman</h2>
+                <h3 class="feynman__subtitle">Balajar tanpa lupa</h3>
+                <a class="feynman__link" href="#"> Selengkapnya </a>
+                <img class="feynman__background-image" alt="Gambar Richard
+                Feynman, fisikawan kuantum terkenal di dunia. Teknik Feynman
+                berasal dari metode belajarnya ketika dia masih menjadi
+                mahasiswa di Princeton." src="./images/feynman.png">
+            </section>
+            <section class="kaufman">
+                <h2 class="kaufman-title ">Sepuluh prinsip mendapatkan keterampilan dengan cepat</h2>
+                <h3 class="kaufman-subtitle">oleh Josh Kaufman</h3>
+                <div class="table">
+                    <div class="table__cell">
+                        <h4 class="table__heading">86 miliar</h4>
+                        <p class="table__text">Jumlah neuron di otak manusia</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">73%</h4>
+                        <p class="table__text">Persentase orang dewasa di AS yang menganggap diri mereka sebagai pembelajar seumur hidup Pew Research Center</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">1.000 terabita</h4>
+                        <p class="table__text">Kapasitas penyimpanan informasi manusia</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">500 triliun</h4>
+                        <p class="table__text">Jumlah sinapsis saraf yang bertanggung jawab untuk belajar pada manusia dewasa rata-rata</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">420 juta</h4>
+                        <p class="table__text">Jumlah orang dewasa di bawah 25 tahun dengan pendidikan yang kurang memadai untuk mencari pekerjaan Bank Dunia, 2017</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">26 tahun</h4>
+                        <p class="table__text">Usia Albert Einstein saat ia menerbitkan makalah inovatifnya mengenai relativitas khusus</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">1885</h4>
+                        <p class="table__text">Pengembangan teori forgetting curve</p>
+                    </div>
+                    <div class="table__cell">
+                        <h4 class="table__heading">1897</h4>
+                        <p class="table__text">Publikasi penelitian Ivan Pavlov tentang pengkondisian klasik</p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
