--- a/index.html
+++ b/index.html
@@ -91,57 +91,75 @@
                 berasal dari metode belajarnya ketika dia masih menjadi
                 mahasiswa di Princeton." src="./images/feynman.png">
             </section>
-            <section class="kaufman theme_dark">
-                <h2 class="kaufman-title theme_dark">Sepuluh prinsip mendapatkan keterampilan dengan cepat</h2>
-                <h3 class="kaufman-subtitle theme_dark">oleh Josh Kaufman</h3>
-                <ul class="kaufman__table table theme_dark">
-                    <li class="kaufman__cell table__cell theme_dark">
-                        <h4 class="table__heading theme_dark">1</h4>
-                        <p class="table__text theme_dark">Pilih suatu proyek yang menyenangkan</p>
+            <section class="kaufman theme__dark">
+                <h2 class="kaufman-title theme__dark">Sepuluh prinsip mendapatkan keterampilan dengan cepat</h2>
+                <h3 class="kaufman-subtitle theme__dark">oleh Josh Kaufman</h3>
+                <ul class="kaufman__table table theme__dark">
+                    <li class="kaufman__cell table__cell theme__dark">
+                        <h4 class="table__heading theme__dark">1</h4>
+                        <p class="table__text theme__dark">Pilih suatu proyek yang menyenangkan</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">2</h4>
-                        <p class="table__text theme_dark">Konsentrasikan energi Anda pada satu keterampilan di satu waktu</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">2</h4>
+                        <p class="table__text theme__dark">Konsentrasikan energi Anda pada satu keterampilan di satu waktu</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">3</h4>
-                        <p class="table__text theme_dark">Definisikan target tingkat kemampuan yang ingin Anda raih</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">3</h4>
+                        <p class="table__text theme__dark">Definisikan target tingkat kemampuan yang ingin Anda raih</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">4</h4>
-                        <p class="table__text theme_dark">Pecah kemampuan yang ingin Anda kuasai menjadi beberapa bagian</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">4</h4>
+                        <p class="table__text theme__dark">Pecah kemampuan yang ingin Anda kuasai menjadi beberapa bagian</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">5</h4>
-                        <p class="table__text theme_dark">Dapatkan alat pendukung yang penting</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">5</h4>
+                        <p class="table__text theme__dark">Dapatkan alat pendukung yang penting</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">6</h4>
-                        <p class="table__text theme_dark">Hilangkan penghalang untuk berlatih</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">6</h4>
+                        <p class="table__text theme__dark">Hilangkan penghalang untuk berlatih</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">7</h4>
-                        <p class="table__text theme_dark">Luangkan waktu untuk latihan</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">7</h4>
+                        <p class="table__text theme__dark">Luangkan waktu untuk latihan</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">8</h4>
-                        <p class="table__text theme_dark">Ciptakan siklus umpan balik yang cepat</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">8</h4>
+                        <p class="table__text theme__dark">Ciptakan siklus umpan balik yang cepat</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">9</h4>
-                        <p class="table__text theme_dark">Berlatihlah dengan keras dalam rentang waktu yang singkat</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">9</h4>
+                        <p class="table__text theme__dark">Berlatihlah dengan keras dalam rentang waktu yang singkat</p>
                     </li>
-                    <li class="kaufman__cell theme_dark">
-                        <h4 class="kaufman__cell table__cell theme_dark">10</h4>
-                        <p class="table__text theme_dark">Tekankan fokus pada kecepatan dan kuantitas</p>
+                    <li class="kaufman__cell theme__dark">
+                        <h4 class="table__heading table__cell theme__dark">10</h4>
+                        <p class="table__text theme__dark">Tekankan fokus pada kecepatan dan kuantitas</p>
                     </li>
                 </ul>
-                <img class="kaufman_triangle" alt="Segitiga biru besar yang diklaim sebagai milik Josh Kaufman" src="./images/kaufman-triangle.svg">
+                <img class="kaufman__triangle" alt="Segitiga biru besar yang diklaim sebagai milik Josh Kaufman" src="./images/kaufman-triangle.svg">
             </section>
 
             <!--  Footer & Contacts -->
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer__columns">
+                <div class="footer__column content__copyright">
+                    <img class="footer__logo place__footer" alt="" src="./images/logo_place_footer.png">
+                    <p class="footer__author footer__text" >© 2023 Yuza</p>
+                </div>
+                <div class="footer__column content__about">
+                    <h5 class="column-heading footer__text">Tentang Practicum </h5>
+                    <p class="footer__list footer__text">Beranda</p>
+                    <p class="footer__list footer__text">Misi</p>
+                    <p class="footer__list footer__text">Profesi</p>
+                </div>
+                <div class="footer__column content__about">
+                    <h5 class="column-heading footer__text">Media sosial </h5>
+                    <p class="footer__list footer__text"><img class="social-icons" alt="ikon facebook" src="./images/facebook_white.svg">Facebook</p>
+                    <p class="footer__list footer__text"><img class="social-icons" alt="ikon insatagram" src="./images/instagram_white.svg">Instagram</p>                                            
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
