--- a/index.html
+++ b/index.html
@@ -4,33 +4,31 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Mempelajari cara belajar</title>
 </head>
 
-<body style="margin: 0px">
+<body>
     <div class="page">
-        
         <!-- Header and navigation -->
         <header class="header">
-            <img class="logo_place-header" src="./images/logo_place_header.png">
-            <div class="container">
-                <h1 class="header_title">Mampelajari cara belajar</h1>
-                <h2 class="header_subtitle">Cara belajar yang canggih dan paling efektif yang dapat diterapkan dalam kehidupan sehari-hari</h2>
-                <a class="header_link" href="#"> Pelajari selengkapnya </a>
+            <img class="logo logo_place_header" src="./images/logo_place_header.png">
+            <div>
+                <h1 class="header__title">Mampelajari cara belajar</h1>
+                <h2 class="header__subtitle">Cara belajar yang canggih dan paling efektif yang dapat diterapkan dalam kehidupan sehari-hari</h2>
+                <a class="header__link" href="#"> Pelajari selengkapnya </a>
                 <img class="header_main-illustrator" alt="Pemikir handal berdiri di puncak gunung membahas poin-poin penting dari sistem pendidikan modern, sambil juga
                 bertanya-tanya dari mana kotak biru raksasa itu berasal." src="./images/header-image.png">
-                <div class="header_square"></div>
+                <div class="header__square"></div>
             </div>
         </header>
 
         <!-- Content page -->
         <main class="content">
             <section class="description">
-                <div class="two-columns">Masalah utama pendidikan</div>
-                <div class="two-columns__brief">
-                </div>
+                <h2 class="two-columns__brief">Masalah utama pendidikan
+                </h2>
                 <div class="two-columns__main-text">
                     <p class="two-columns__paragraph"> Baik di sekolah maupun universitas, satu hal yang tidak pernah diajarkan kepada Anda adalah cara mengajar diri sendiri. Umumnya, kita hanya menghafal materi tertentu dan melatih diri untuk mengikuti tes sehingga dapat lulus pada tes tersebut pada waktunya. Namun, setelah ujian dan tes selesai, informasi yang Anda hafalkan tersebut seakan tidak lagi berguna, dan karenanya, tidak ada jaminan bahwa Anda akan tetap ingat hal-hal yang telah dipelajari di sekolah. Pada akhirnya, kita hanya belajar bagaimana cara untuk lulus ujian.
                     </p>
@@ -43,8 +41,8 @@
 
             <!-- Digits page -->
             <section class="digits">
-                <h2 class="digits-title">Fakta dan angka</h2>
-                <h3 class="digits-subtitle">Tentang belajar dan otak</h3>
+                <h2 class="section-title">Fakta dan angka</h2>
+                <h3 class="section-subtitle">Tentang belajar dan otak</h3>
                 <ul class="digits__table table">
                     <li class="digits__cell table__cell">
                         <h4 class="table__heading">86 miliar</h4>
@@ -91,49 +89,49 @@
                 berasal dari metode belajarnya ketika dia masih menjadi
                 mahasiswa di Princeton." src="./images/feynman.png">
             </section>
-            <section class="kaufman theme__dark">
-                <h2 class="kaufman-title theme__dark">Sepuluh prinsip mendapatkan keterampilan dengan cepat</h2>
-                <h3 class="kaufman-subtitle theme__dark">oleh Josh Kaufman</h3>
-                <ul class="kaufman__table table theme__dark">
-                    <li class="kaufman__cell table__cell theme__dark">
-                        <h4 class="table__heading theme__dark">1</h4>
-                        <p class="table__text theme__dark">Pilih suatu proyek yang menyenangkan</p>
+            <section class="kaufman">
+                <h2 class="section-title">Sepuluh prinsip mendapatkan keterampilan dengan cepat</h2>
+                <h3 class="section-subtitle">oleh Josh Kaufman</h3>
+                <ul class="kaufman__table table table_theme_dark">
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">1</h4>
+                        <p class="table__text table__text_theme_dark">Pilih suatu proyek yang menyenangkan</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">2</h4>
-                        <p class="table__text theme__dark">Konsentrasikan energi Anda pada satu keterampilan di satu waktu</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">2</h4>
+                        <p class="table__text table__text_theme_dark">Konsentrasikan energi Anda pada satu keterampilan di satu waktu</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">3</h4>
-                        <p class="table__text theme__dark">Definisikan target tingkat kemampuan yang ingin Anda raih</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">3</h4>
+                        <p class="table__text table__text_theme_dark">Definisikan target tingkat kemampuan yang ingin Anda raih</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">4</h4>
-                        <p class="table__text theme__dark">Pecah kemampuan yang ingin Anda kuasai menjadi beberapa bagian</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">4</h4>
+                        <p class="table__text table__text_theme_dark">Pecah kemampuan yang ingin Anda kuasai menjadi beberapa bagian</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">5</h4>
-                        <p class="table__text theme__dark">Dapatkan alat pendukung yang penting</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">5</h4>
+                        <p class="table__text table__text_theme_dark">Dapatkan alat pendukung yang penting</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">6</h4>
-                        <p class="table__text theme__dark">Hilangkan penghalang untuk berlatih</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">6</h4>
+                        <p class="table__text table__text_theme_dark">Hilangkan penghalang untuk berlatih</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">7</h4>
-                        <p class="table__text theme__dark">Luangkan waktu untuk latihan</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">7</h4>
+                        <p class="table__text table__text_theme_dark">Luangkan waktu untuk latihan</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">8</h4>
-                        <p class="table__text theme__dark">Ciptakan siklus umpan balik yang cepat</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">8</h4>
+                        <p class="table__text table__text_theme_dark">Ciptakan siklus umpan balik yang cepat</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">9</h4>
-                        <p class="table__text theme__dark">Berlatihlah dengan keras dalam rentang waktu yang singkat</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">9</h4>
+                        <p class="table__text table__text_theme_dark">Berlatihlah dengan keras dalam rentang waktu yang singkat</p>
                     </li>
-                    <li class="kaufman__cell theme__dark">
-                        <h4 class="table__heading table__cell theme__dark">10</h4>
-                        <p class="table__text theme__dark">Tekankan fokus pada kecepatan dan kuantitas</p>
+                    <li class="kaufman__cell table__cell table__cell_theme_dark">
+                        <h4 class="table__heading table__heading_theme_dark">10</h4>
+                        <p class="table__text">Tekankan fokus pada kecepatan dan kuantitas</p>
                     </li>
                 </ul>
                 <img class="kaufman__triangle" alt="Segitiga biru besar yang diklaim sebagai milik Josh Kaufman" src="./images/kaufman-triangle.svg">
@@ -143,20 +141,20 @@
         </main>
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__column content__copyright">
-                    <img class="footer__logo place__footer" alt="" src="./images/logo_place_footer.png">
+                <div class="footer__column footer__column_content_copyright">
+                    <img class="logo logo_place_footer" alt="" src="./images/logo_place_footer.png">
                     <p class="footer__author footer__text" >© 2023 Yuza</p>
                 </div>
-                <div class="footer__column content__about">
-                    <h5 class="column-heading footer__text">Tentang Practicum </h5>
-                    <p class="footer__list footer__text">Beranda</p>
-                    <p class="footer__list footer__text">Misi</p>
-                    <p class="footer__list footer__text">Profesi</p>
+                <div class="footer__column footer__column_content_about">
+                    <h5 class="footer__column-heading footer__text">Tentang Practicum </h5>
+                    <a class="footer__list footer__text" href="#">Beranda</a>
+                    <a class="footer__list footer__text" href="#">Misi</a>
+                    <a class="footer__list footer__text" href="#">Profesi</a>
                 </div>
-                <div class="footer__column content__about">
-                    <h5 class="column-heading footer__text">Media sosial </h5>
-                    <p class="footer__list footer__text"><img class="social-icons" alt="ikon facebook" src="./images/facebook_white.svg">Facebook</p>
-                    <p class="footer__list footer__text"><img class="social-icons" alt="ikon insatagram" src="./images/instagram_white.svg">Instagram</p>                                            
+                <div class="footer__column footer__column_content_about">
+                    <h5 class="footer__column-heading footer__text">Media sosial </h5>
+                    <a class="footer__list footer__text" href="#"><img class="social-icons" alt="ikon facebook" src="./images/facebook_white.svg">Facebook</a>
+                    <a class="footer__list footer__text" href="#"><img class="social-icons" alt="ikon insatagram" src="./images/instagram_white.svg">Instagram</a>                                            
                 </div>
             </div>
         </footer>
